[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=1]

[node name="MainMenuScene" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 436.0
margin_top = 178.0
margin_right = 524.0
margin_bottom = 362.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
text = "Start game"

[node name="WorldSize" type="OptionButton" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0

[node name="Seed" type="SpinBox" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 88.0
margin_bottom = 72.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 88.0
margin_bottom = 80.0

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 88.0
margin_bottom = 104.0
text = "Load game"

[node name="DeleteSave" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 88.0
margin_bottom = 128.0
text = "Delete save"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 88.0
margin_bottom = 136.0

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 88.0
margin_bottom = 160.0
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 88.0
margin_bottom = 184.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start"]
[connection signal="item_selected" from="VBoxContainer/WorldSize" to="." method="_on_world_size_selected"]
[connection signal="changed" from="VBoxContainer/Seed" to="." method="_on_seed_changed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load"]
[connection signal="pressed" from="VBoxContainer/DeleteSave" to="." method="_on_delete_save"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_exit"]
